ISPC monitor selector Fixes #4729, refinements for progressbars values (left margin when value is too low)

--- a/interface/web/themes/default/assets/stylesheets/ispconfig.css
+++ b/interface/web/themes/default/assets/stylesheets/ispconfig.css
@@ -792,3 +792,11 @@ span.company_name {
 span.tmp_account_name {
     font-size: 0.9em;
 }
+
+#select_server .select2-choice {
+    height: auto;
+}
+span.pbvaluemargin {
+    margin-left: 5px;
+}
+
